# pyper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
google_ads/: __manifest__.py
icecat_connector/: __manifest__.py
linkedin_partner/: __manifest__.py
pappers_connector/: __manifest__.py
piloterr_company_lookup/: __manifest__.py
piloterr_connector/: __manifest__.py
piloterr_email_finder/: __manifest__.py
piloterr_linkedin_lookup/: __manifest__.py
piloterr_website_technologies/: __manifest__.py
pyper/: __init__.py  __manifest__.py  fields.py
pyper_access_rights/: __manifest__.py
pyper_accessibility/: __manifest__.py
pyper_account_extra/: __manifest__.py
pyper_account_fiscal_year/: __manifest__.py
pyper_account_peppol_saas/: __manifest__.py
pyper_account_service_tax/: __manifest__.py
pyper_activity/: __manifest__.py
pyper_application/: __init__.py  __manifest__.py
pyper_auth_signup_saas/: __manifest__.py
pyper_automation/: __init__.py  __manifest__.py
pyper_aws_ses/: __manifest__.py
pyper_chat_config/: __manifest__.py
pyper_chat_disable_auto_subscribe/: __init__.py  __manifest__.py
pyper_command_search/: __manifest__.py
pyper_contact/: __init__.py  __manifest__.py
pyper_control_panel/: __manifest__.py
pyper_crm_saas/: __manifest__.py
pyper_custom_report/: __init__.py  __manifest__.py
pyper_dashboard/: __manifest__.py
pyper_dashboard_editor/: __manifest__.py
pyper_dashboard_spreadsheet_dashboard/: __init__.py  __manifest__.py
pyper_digest_saas/: __manifest__.py
pyper_discuss/: __manifest__.py
(+1365 files in other folders)
